--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-    "version": 2,
     "builds": [
         {
-            "src": "./index.py",
+            "src": "api/index.py",
             "use": "@vercel/python"
         }
     ],
